# cmeel-spral

./: .cirrus.yml  .pre-commit-config.yaml  CMakeLists.txt  configure.patch  pyproject.toml
.github/workflows/: release.yml
